--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,18 @@
       android:layout_margin="25dp"
       android:src="@drawable/ic_settings"
       android:background="@android:color/transparent"/>
+  <ImageButton
+      android:id="@+id/reset_button"
+      android:layout_width="62dp"
+      android:layout_height="65dp"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true"
+      android:layout_marginStart="25dp"
+      android:layout_marginLeft="25dp"
+      android:layout_marginTop="24dp"
+      android:layout_marginEnd="25dp"
+      android:layout_marginRight="25dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/reset" />
 
 </RelativeLayout>
