--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,33 @@
-<!--
-   Copyright 2016 Google LLC
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
-<resources>
-
-  <!--
-      Base application theme, dependent on API level. This theme is replaced
-      by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-  -->
-  <style name="AppBaseTheme" parent="android:Theme.Light">
-    <!--
-        Theme customizations available in newer API levels can go in
-        res/values-vXX/styles.xml, while customizations related to
-        backward-compatibility can go here.
-    -->
+  <!-- Base theme for both light and dark themes -->
+  <style name="Base.Theme.Decor" parent="Theme.MaterialComponents.DayNight.DarkActionBar" tools:ignore="DuplicateDefinition">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/lavender</item>
+    <item name="colorPrimaryVariant">@color/lavender</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorSecondaryVariant">@color/teal_700</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
   </style>
 
-  <!-- Application theme. -->
-  <style name="AppTheme" parent="AppBaseTheme">
+  <!-- Light theme -->
+  <style name="Base.Theme.Decor.Light" parent="Theme.MaterialComponents.Light.DarkActionBar" tools:ignore="DuplicateDefinition">
+    <!-- Customize your light theme here. -->
+    <item name="colorPrimary">@android:color/black</item>
+    <!-- You can add more customization for the light theme if needed. -->
+  </style>
+
+  <!-- Dark theme -->
+  <style name="Base.Theme.Decor.Dark" parent="Base.Theme.Decor" />
+
+  <!-- Application theme -->
+  <style name="AppTheme" parent="Base.Theme.Decor">
     <!-- All customizations that are NOT specific to a particular API-level can go here. -->
   </style>
+  <style name="Theme.Decor" parent="Base.Theme.Decor" />
 
 </resources>
