--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.google.ar.core.examples.java.helloar.HelloArActivity">
 
   <android.opengl.GLSurfaceView
       android:id="@+id/surfaceview"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:layout_gravity="top"/>
+      android:layout_gravity="top" />
 
   <ImageButton
       android:id="@+id/settings_button"
@@ -34,5 +35,31 @@
       android:layout_margin="25dp"
       android:src="@drawable/ic_settings"
       android:background="@android:color/transparent"/>
+
+
+
+  <ImageButton
+      android:id="@+id/imageView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_margin="25dp"
+      android:visibility="invisible"
+      app:srcCompat="@drawable/ic_delete_foreground"
+      android:background="@android:color/transparent"/>
+
+  <ImageButton
+      android:id="@+id/imageButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentEnd="true"
+      android:layout_alignParentBottom="true"
+      android:layout_margin="25dp"
+      android:visibility="invisible"
+      app:srcCompat="@drawable/ic_verif_foreground"
+      android:background="@android:color/transparent"
+
+      />
+
 
 </RelativeLayout>
