--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -85,5 +85,10 @@
                 android:text="Login" />
 
         </RelativeLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Skip" />
     </LinearLayout>
 </ScrollView>
